# trip-planner

./: .gitignore  README.md  main.py  pyproject.toml  reproduce_voting_issue.py  start_server.sh  verify_itinerary.py  verify_voting_fix.py
config/: env.example
docs/: langgraph_transition_plan.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddParticipantWizard.tsx  CreateTripWizard.tsx  ErrorBoundary.tsx  ItineraryView.tsx  Layout.tsx  LogisticsView.tsx  MapComponent.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Checkbox.tsx  Input.tsx  LocationInput.tsx  (+3 more)
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx  Home.tsx  JoinTripPage.tsx  LandingPage.tsx  TripDetail.tsx
frontend/src/services/: api.ts
packvote/: __init__.py  app.py  config.py  db.py  enums.py  models.py  schemas.py
packvote/api/: __init__.py  dependencies.py
packvote/api/routes/: __init__.py  health.py  participants.py  recommendations.py  surveys.py  trips.py  votes.py  webhooks.py
packvote/services/: __init__.py  ai_gateway.py  itinerary_agent.py  messaging.py  metrics.py  rate_limit.py  recommendation_agent.py  recommendations.py  voting.py
packvote/services/agents/: __init__.py  flight_agent.py  hotel_agent.py  itinerary_agent.py  recommendation_agent.py
packvote/ui/: __init__.py
packvote/ui/static/: index.html  main.js  styles.css  trip-styles.css  trip.html  trip.js
tests/: __init__.py  conftest.py  test_recommendation_agent.py  test_workflow.py
(+10 files in other folders)
